Fixed contrast issues

--- a/samples/sample1/style.css
+++ b/samples/sample1/style.css
@@ -17,8 +17,8 @@ h1 {
   position: absolute;
   top: -40px;
   left: 0;
-  background-color: #f00;
-  color: white;
+  background-color: white;
+  color: blue;
   padding: 8px;
   z-index: 100;
   transition: top 0.3s;
@@ -26,7 +26,7 @@ h1 {
 
 .skiplink:focus {
   top:0;
-  outline: 2px solid #f00;
+  outline: 2px solid blue;
 }
 
 a {
